2008-12-14  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* datrie/darray.c (da_read):
	* datrie/tail.c (tail_read):
	Restore file pointer on signature check failure.

2008-12-14  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* man/trietool.1: Document that no more than 255 alphabets are allowed.

2008-12-13  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Ensure that ranges in AlphaMap are always sorted and don't overlap.

	* datrie/alpha-map.c (struct _AlphaMap, alpha_map_new):
	  - Remove 'last_range' member
	* datrie/alpha-map.c (alpha_map_add_range):
	  - Check if the new range overlaps existing ranges and merge them
	    as necessary.

2008-12-13  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.ac: Post-release version bump.
	* configure.ac, Makefile.am, datrie.pc.in -> datrie-0.2.pc.in:
	Rename pkg-config file, to allow co-existence with datrie 0.1.x.

2008-12-12  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* NEWS, configure.ac:
	=== Version 0.1.99.1 ===

2008-12-12  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* man/trietool.1: Update document
	  - Trie is now stored in a single '*.tri' file
	  - The alphabet map is renamed from '*.sbm' to '*.abm'
	  - Mention Unicode, instead of single-byte character domain
	  - Document the options for 'add-list' and 'delete-list' commands
	  - Adjust troff formatting commands

2008-12-12  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* tools/trietool.c (prepare_trie):
	  - Try to read alphabet map from '*.abm' instead of '*.sbm'

2008-12-11  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Allow specifying character encoding for word list file.

	* tools/trietool.c (command_add_list, command_delete_list):
	  - Add '-e|--encoding ENC' option which temporarily override locale's
	    codeset for character conversion
	* tools/trietool.c (usage):
	  - Update usage message accordingly

2008-12-09  Theppitak Karoonboonyanan  <thep@linux.thai.net>
